--- a/analysis/exploreArrayBias450.Rmd
+++ b/analysis/exploreArrayBias450.Rmd
@@ -6,7 +6,7 @@ date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output: html_document
 ---
 
-```{r, include=FALSE}
+```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 options(scipen=10000)
 ```
@@ -49,55 +49,83 @@ numCpgsPerGene <- as.vector(table(flatAnn$entrezid))
 summary(numCpgsPerGene)
 ```
 
+### Supp. Figure 1A {.tabset}
+#### View
+
 ```{r}
 dat <- data.frame(table(table(flatAnn$entrezid)))
+numCpgsPerGene <- as.vector(table(flatAnn$entrezid))
 med <- median(numCpgsPerGene)
 mod <- getMode(numCpgsPerGene)
-  
-ggplot(dat, aes(x=Var1, y=Freq)) +
-  geom_segment(aes(x=Var1, xend=Var1, y=0, yend=Freq), color="darkgrey") +
-  geom_point( color="black", size=1) +
-  geom_vline(xintercept = med, linetype = "dashed", color = "red") +
-  annotate("text", x = med + 2, label=glue("median = {med}"), y=700, colour="red", 
-            size = 3, hjust="left") +
-  geom_vline(xintercept = mod, linetype = "dashed", color = "blue") +
-  annotate("text", x = mod + 2, label=glue("mode = {mod}"), y=760, colour="blue", 
-            size = 3, hjust="left") +
-  scale_x_discrete(breaks = c(1,10,20,30,45,55,70,80,90,100,120,135,150,160,180,
-                              200,215,250,330,429,1485)) +
-  theme(axis.text.x=element_text(angle=45, hjust=1)) +
-  xlab("No. CpGs per gene") +
-  ylab("Frequency")
+
+p <- ggplot(dat, aes(x=Var1, y=Freq)) +
+    geom_segment(aes(x=Var1, xend=Var1, y=0, yend=Freq), color="darkgrey") +
+    geom_point( color="black", size=1) +
+    geom_vline(xintercept = med, linetype = "dashed", color = "red") +
+    annotate("text", x = med + 2, label=glue("median = {med}"), y=720, 
+             colour="red", size = 3, hjust="left") +
+    geom_vline(xintercept = mod, linetype = "dashed", color = "red") +
+    annotate("text", x = mod + 2, label=glue("mode = {mod}"), y=780, 
+             colour="red", size = 3, hjust="left") +
+    scale_x_discrete(breaks = c(1,5,10,20,35,50,60,70,80,90,100,125,152,202,
+                                251,350,1299)) +
+    theme(axis.text.x=element_text(angle=45, hjust=1)) +
+    xlab("No. CpGs per gene") +
+    ylab("Frequency")
+p
 ```
 
+#### Create PDF
+
+```{r, eval=FALSE}
+fig <- here("output/SFig-1A.pdf")
+
+pdf(file = fig, width = 9)
+p
+dev.off()
+```
+
+### Supp. Figure 1B {.tabset}
+#### View
 The number of genes a CpG maps to can also vary, although the majority of CpGs only map to one gene.
 
 ```{r}
 dat <- data.frame(table(table(flatAnn$cpg)))
-dat$Split <- ifelse(dat$Freq > 2500, "A", 
-                    ifelse(dat$Freq < 2500 & dat$Freq > 65,"B","C"))
+dat$Split <- ifelse(dat$Freq > 2000, "A",
+                    ifelse(dat$Freq < 2000 & dat$Freq > 50,"B","C"))
 
 a <- ggplot(dat[dat$Split == "A",], aes(x=Var1, y=Freq)) +
-  geom_bar(stat = "identity") +
-  theme(axis.title.x = element_blank(), 
-        axis.text.y=element_text(angle=90, hjust=0.5)) +
-  ylab("Frequency")
+    geom_bar(stat = "identity") +
+    theme(axis.title.x = element_blank(),
+          axis.text.y=element_text(angle=90, hjust=0.5)) +
+    ylab("Frequency")
 
 b <- ggplot(dat[dat$Split == "B",], aes(x=Var1, y=Freq)) +
-  geom_bar(stat = "identity") +
-  theme(axis.title.x = element_blank(),
-        axis.title.y = element_blank())
+    geom_bar(stat = "identity") +
+    theme(axis.title.x = element_blank(),
+          axis.title.y = element_blank())
 
 c <- ggplot(dat[dat$Split == "C",], aes(x=Var1, y=Freq)) +
-  geom_bar(stat = "identity") +
-  theme(axis.title.x=element_blank(),
-        axis.title.y = element_blank()) 
+    geom_bar(stat = "identity") +
+    theme(axis.title.x=element_blank(),
+          axis.title.y = element_blank())
 
-a + b + c + plot_layout(widths = c(1,2,6)) + 
-  plot_annotation(caption = "No. genes mapped to a CpG",
-                  theme = theme(plot.caption = element_text(hjust = 0.5, 
-                                                            size = 12)))
+p <- a + b + c + plot_layout(widths = c(1,2,6)) +
+    plot_annotation(caption = "No. genes mapped to a CpG",
+                    theme = theme(plot.caption = element_text(hjust = 0.5,
+                                                              size = 12)))
+p
 ```
+
+#### Create PDF
+```{r, eval=FALSE}
+fig <- here("output/SFig-1B.pdf")
+pdf(file = fig, width = 9)
+p
+dev.off()
+```
+
+### {-}
 
 Explore the distribution of the average number of CpGs per gene, per GO category. First, associate GO categories with the CpG and gene data.
 
@@ -130,10 +158,13 @@ Null simulation strategy: randomly select 50, 100, 500, 1000, 5000 and 10000 set
 
 The code used for the simulation can be found in `r here("code/randCpgSim.R")`.   
 
+### Supplementary Figure 3A {.tabset}
+#### View
+
 The following boxplots show what proportion of the 100 simulations, at each level of CpGs sampled, had a raw p-value less than 0.05. This gives us an idea of the false discovery rate with and without adjustment for the number of CpGs annotated to a gene.
 
 ```{r}
-dat <- readRDS(here("output/random-cpg-sims/450K.rds"))
+dat <- readRDS(here("output/random-cpg-sims/EPIC.rds"))
 
 dat %>% filter(method %in% names(dict)) %>%
     mutate(method = unname(dict[method])) %>%
@@ -148,6 +179,17 @@ p <- ggplot(sigDat, aes(x=noCpgs, y=pSig, fill=method)) +
     scale_fill_manual(values = methodCols)
 p
 ```
+
+### Create PDF
+```{r, eval=FALSE}
+fig <- here("output/SFig-3A.pdf")
+
+pdf(file = fig, width = 9)
+p
+dev.off()
+```
+
+## {-}
 
 QQ plots of randomly selected simulations at each level of CpGs sampled.
 
@@ -174,6 +216,9 @@ p + geom_line(aes(x=-log10(exp), y=-log10(exp)),
     theme(legend.position="bottom", strip.text.x = element_blank())
 ```
 
+### Supp. Figure 3B {.tabset}
+#### View
+
 Explore the relationship between the median, average number of CpGs, per gene, per GO category and the various sources of bias on the array.
 
 ```{r}
@@ -189,14 +234,26 @@ dat %>% filter(method %in% names(dict)) %>%
     summarise(medAvgFreq=median(avgFreq)) -> medAvgDat
 
 p <- ggplot(medAvgDat, aes(x=noCpgs, y=medAvgFreq, fill=method)) + 
-    geom_violin()
-p + stat_summary(geom="point", size=1, color="white", position = position_dodge(0.9),
+    geom_violin() + 
+    stat_summary(geom="point", size=1, color="white", position = position_dodge(0.9),
                  show.legend = FALSE, fun = median) +
     labs(y="Median avg. no. CpGs/gene/GO cat.", 
          x="No. randomly sampled CpGs",
          fill="Method")  +
     scale_fill_manual(values = methodCols)
+p
 ```
+
+#### Create PDF
+```{r, eval=FALSE}
+fig <- here("output/SFig-3B.pdf")
+
+pdf(file = fig, width = 9)
+p
+dev.off()
+```
+
+## {-}
 
 
 
